--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: rgb(83,166,38);
 }
 
 body {
@@ -39,7 +39,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgb(83,166,38)  ;
 }
 button:focus,
 button:focus-visible {
@@ -52,7 +52,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: rgb(83,166,38);
   }
   button {
     background-color: #f9f9f9;
